# grammarinator

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CITATION.bib  LICENSE.rst  MANIFEST.in  README.rst  RELNOTES.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: cli.rst  conf.py  grammarinator.rst  grammarinator.runtime.rst  grammarinator.tool.rst  index.rst  introduction.rst  license.rst  relnotes.rst  requirements.txt  user_guide.rst
docs/guide/: actions.rst  aflpp_integration.rst  fuzzer_building.rst  grammar_overview.rst  libfuzzer_integration.rst  listeners.rst  models.rst  population.rst  serializers.rst  test_generation.rst  transformers.rst
examples/fuzzer/: HTMLConfig.hpp  HTMLCustomGenerator.py  HTMLCustomUnlexer.py  HTMLCustomUnparser.py  HTMLGenerator.hpp  HTMLGenerator.py  HTMLSpaceSerializer.hpp  HTMLUnlexer.py  HTMLUnparser.py  html.json
examples/grammars/: HTMLLexer.g4  HTMLParser.g4
grammarinator/: VERSION  __init__.py  cli.py  decode.py  generate.py  parse.py  parser_builder.py  pkgdata.py  process.py
grammarinator-cxx/: .clang-format  .cppcheck-suppress.txt  CMakeLists.txt  conanfile.txt
grammarinator-cxx/common/: config.h
grammarinator-cxx/config/grammarinator/: config.hpp
grammarinator-cxx/dev/: build.py  clang-format.py  cppcheck.py  requirements.txt
grammarinator-cxx/libgrafl/: CMakeLists.txt  grafl.cpp  libgrafl.pc.in  trimmer.hpp
grammarinator-cxx/libgrammarinator/: CMakeLists.txt  libgrammarinator.pc.in
grammarinator-cxx/libgrammarinator/include/grammarinator/: runtime.hpp  tool.hpp
grammarinator-cxx/libgrammarinator/include/grammarinator/runtime/: DefaultModel.hpp  Generator.hpp  Listener.hpp  Model.hpp  Population.hpp  Rule.hpp  Serializer.hpp  WeightedModel.hpp
grammarinator-cxx/libgrammarinator/include/grammarinator/tool/: AFLTool.hpp  DefaultGeneratorFactory.hpp  DefaultPopulation.hpp  FilePopulation.hpp  FlatBuffersTreeCodec.hpp  GeneratorFactory.hpp  GeneratorTool.hpp  JsonTreeCodec.hpp  JsonWeightLoader.hpp  LibFuzzerTool.hpp  NlohmannJsonTreeCodec.hpp  SubTreePopulation.hpp  Tool.hpp  TreeCodec.hpp
grammarinator-cxx/libgrammarinator/include/grammarinator/util/: log.hpp  print.hpp  random.hpp
grammarinator-cxx/libgrlf/: CMakeLists.txt  grlf.cpp  libgrlf.pc.in
grammarinator-cxx/libgrlf/include/: grlf.h
grammarinator-cxx/tools/: CMakeLists.txt  decode.cpp  fuzznull.cpp  generate.cpp
grammarinator/model/: __init__.py  cooldown_model.py  default_model.py  dispatching_model.py  random.py
grammarinator/parser/: __init__.py
grammarinator/resources/codegen/: GeneratorTemplate.py.jinja
grammarinator/runtime/: __init__.py  constant_weights_model.py  cooldown_model.py  custom_weights_model.py  default_listener.py  default_model.py  dispatching_listener.py  dispatching_model.py  generator.py  grammarinator.py  listener.py  model.py  population.py  rule.py  serializer.py  transformer.py  tree.py  weighted_model.py
grammarinator/tool/: __init__.py  default_population.py  file_population.py  generate.py  generator.py  parse.py  parser.py  parser_builder.py  process.py  processor.py  tree_codec.py
grammarinator/tool/fbs/: FBRule_generated.py  __init__.py
grammarinator/tool/resources/codegen/: GeneratorTemplate.hpp.jinja  GeneratorTemplate.py.jinja
grammarinator/tool/resources/fbs/: FBRule.fbs
tests/: __init__.py  parse.py  reparse.py  run_grammars.py  test_examples.py  test_grammars.py  test_grammars_cxx.py  test_parser.py
tests/grammars/: Alternatives.g4  Arguments.g4  ArgumentsInAlternations.g4  Charset.g4  ChildAccessors.g4  Curly.g4  Custom.g4  CustomImplicitLiteralGenerator.py  CustomSubclassGenerator.py  CustomSubclassUnlexer.py  CustomSubclassUnparser.py  CustomWeights.g4  CustomWeightsModel.g4  DefaultRule.g4  DispatchingModel.g4  Dot.g4  DotOption.g4  EmptyAlternatives.g4  Eof.g4  Fragment.g4  Hello.g4  ImagToken.g4  ImplicitLiteral.g4  ImportActionsTokens.g4  Importer.g4  InitAfter.g4  LabeledAlternatives.g4  LifeCycle.g4  Listeners.g4  Locals.g4  MaxTokens.g4  MinDepth.g4  Models.g4  NoAction.g4  ParserNotSet.g4  Quantifiers.g4  RecurringLabelTrampolines.g4  RecurringLabeledAlternatives.g4  Recursive.g4  Returns.g4  (+10 more)
tests/grammars-cxx/: Arguments.g4  ArgumentsInAlternations.g4  Charset.g4  ChildAccessors.g4  Curly.g4  Custom.g4  CustomSubclassGenerator.hpp  CustomWeights.g4  DefaultRule.g4  Dot.g4  EmptyAlternatives.g4  Fragment.g4  Hello.g4  ImagToken.g4  ImagTokenSubclassGenerator.hpp  ImplicitLiteral.g4  ImportActionsTokens.g4  Importer.g4  LabeledAlternatives.g4  LifeCycle.g4  Listeners.g4  Locals.g4  MaxTokens.g4  MinDepth.g4  NoAction.g4  ParserNotSet.g4  Quantifiers.g4  RecurringLabelTrampolines.g4  RecurringLabeledAlternatives.g4  Recursive.g4  Semantic.g4  SeparateLexer.g4  SeparateParser.g4  SimpleAlternations.g4  SuperClass.g4  SuperClassOption.g4  SuperGenerator.hpp  UnicodePropertiesLexer.g4  UnicodePropertiesParser.g4  Whitespace.g4  (+1 more)
tests/grammars-cxx/import/: ImportedActionsTokens.g4  Importee.g4  Importee3.g4
tests/grammars/import/: ImportedActionsTokens.g4  Importee1.g4  Importee2.g4
tests/parser/: Parse.g4  exp1.grtj  exp2.grtj  exp3.grtj  exp4.grtj  exp5.grtj  exp6.grtj  exp7.grtj  exp8.grtj  inp2.txt  inp3.txt  inp4.txt  inp5.txt  inp6.txt  inp7.txt  inp8.txt
