[metadata]
name = grammarinator
description = Grammarinator: Grammar-based Random Test Generator
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/grammarinator
license = BSD
license_files = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Testing
platform = any

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    antlerinator>=1!3.0.0
    antlr4-python3-runtime==4.13.0
    autopep8
    importlib-metadata; python_version < "3.8"
    inators
    jinja2
    regex

[options.entry_points]
console_scripts =
    grammarinator-process = grammarinator.process:execute
    grammarinator-generate = grammarinator.generate:execute
    grammarinator-parse = grammarinator.parse:execute

[build_antlr]
commands =
    antlerinator:4.13.0 grammarinator/tool/resources/g4/ANTLRv4Lexer.g4 grammarinator/tool/resources/g4/ANTLRv4Parser.g4 -Dlanguage=Python3 -o grammarinator/tool/g4 -Xexact-output-dir -no-listener
output =
    grammarinator/tool/parser/ANTLRv4*.py
